RESOLVED FIXED282611
Crash under DownloadProxy::~DownloadProxy()
https://bugs.webkit.org/show_bug.cgi?id=282611
Summary Crash under DownloadProxy::~DownloadProxy()
Chris Dumez
Reported 2024-11-05 09:21:24 PST
Crash under DownloadProxy::~DownloadProxy(): ``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 WebKit 0x1a7cbf9b0 WTFCrashWithInfo(int, char const*, char const*, int) + 24 1 WebKit 0x1a7cbf9b0 WTF::CanMakeCheckedPtrBase<WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int>::decrementPtrCount() const + 24 2 WebKit 0x1a7cbf9b0 WTF::CheckedRef<WebKit::DownloadProxyMap, WTF::RawPtrTraits<WebKit::DownloadProxyMap>>::~CheckedRef() + 24 3 WebKit 0x1a7cbf9b0 WTF::CheckedRef<WebKit::DownloadProxyMap, WTF::RawPtrTraits<WebKit::DownloadProxyMap>>::~CheckedRef() + 24 4 WebKit 0x1a7cbf9b0 WebKit::DownloadProxy::~DownloadProxy() + 632 5 WebKit 0x1a7882dd4 -[WKDownload dealloc] + 88 6 libsystem_blocks.dylib 0x21b5c5018 _call_dispose_helpers_excp + 48 7 libsystem_blocks.dylib 0x21b5c4fcc _call_dispose_helpers(Block_layout*) + 120 8 libsystem_blocks.dylib 0x21b5c4fcc _Block_release + 256 ```
Attachments
Chris Dumez
Comment 1 2024-11-05 09:21:32 PST
Chris Dumez
Comment 2 2024-11-05 09:56:16 PST
EWS
Comment 3 2024-11-05 13:00:42 PST
Committed 286182@main (9f69376c782b): <https://commits.webkit.org/286182@main> Reviewed commits have been landed. Closing PR #36194 and removing active labels.
Ali Juma
Comment 4 2024-11-06 07:04:41 PST
*** Bug 282243 has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 5 2024-11-07 15:51:13 PST
EWS
Comment 6 2024-11-08 14:37:47 PST
Committed 283286.464@safari-7620-branch (9ea0c9e649a6): <https://commits.webkit.org/283286.464@safari-7620-branch> Reviewed commits have been landed. Closing PR #2247 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.