Crash under DownloadProxy::~DownloadProxy() https://bugs.webkit.org/show_bug.cgi?id=282611 rdar://138845738

Reviewed by Geoffrey Garen.

DownloadProxy is ref-counted and thus can outlive its DownloadProxyMap.
As a result, DownloadProxy cannot hold a CheckedRef to its DownloadProxyMap.
Switching to a WeakPtr instead.

* Source/WebKit/UIProcess/Downloads/DownloadProxy.cpp:
(WebKit::DownloadProxy::cancel):
(WebKit::DownloadProxy::didFinish):
(WebKit::DownloadProxy::didFail):
* Source/WebKit/UIProcess/Downloads/DownloadProxy.h:
* Source/WebKit/UIProcess/Downloads/DownloadProxyMap.cpp:
(WebKit::DownloadProxyMap::ref const):
(WebKit::DownloadProxyMap::deref const):
* Source/WebKit/UIProcess/Downloads/DownloadProxyMap.h:
* Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::createDownloadProxy):

Canonical link: https://commits.webkit.org/286182@main